--- a/tutorial/src/bagging.Rmd
+++ b/tutorial/src/bagging.Rmd
@@ -26,12 +26,14 @@ bag.lrn = makeBaggingWrapper(lrn, bw.iters = 50, bw.replace = TRUE, bw.size = 0.
 Now we can compare the performance with and without bagging.
 First let's try it without bagging:
 ```{r makeBaggingWrapper_without}
-r = resample(learner = lrn, task = sonar.task, resampling = sonar.rin, show.info = FALSE)
+rin = makeResampleDesc("CV", iters = 10)
+r = resample(learner = lrn, task = sonar.task, resampling = rin, show.info = FALSE)
 r$aggr
 ```
 And now with bagging:
 ```{r makeBaggingWrapper_with}
-result = resample(learner = bag.lrn, task = sonar.task, resampling = sonar.rin, show.info = FALSE)
+rin = makeResampleDesc("CV", iters = 10)
+result = resample(learner = bag.lrn, task = sonar.task, resampling = rin, show.info = FALSE)
 result$aggr
 ```
 Training more learners takes more time, but can outperform pure learners
