--- a/tutorial/src/feature_selection.Rmd
+++ b/tutorial/src/feature_selection.Rmd
@@ -154,7 +154,7 @@ lrn = makeFilterWrapper(learner = "regr.lm", fw.method = "chi.squared",
   fw.select = "perc")
 ps = makeParamSet(makeDiscreteParam("fw.val", values = seq(0.2, 0.5, 0.05)))
 rdesc = makeResampleDesc("CV", iters = 3)
-res = tuneParams(lrn, task = rdesc, resampling = rdesc, par.set = ps,
+res = tuneParams(lrn, task = bh.task, resampling = rdesc, par.set = ps,
   control = makeTuneControlGrid())
 res
 ```
