moved CoxBoost learner to optimCoxBoostPenalty; added version w/o cv

--- a/NEWS
+++ b/NEWS
@@ -52,6 +52,7 @@ mlr_2.2:
 -- cluster.kmeans
 -- cluster.FarthestFirst
 -- surv.cvglmnet
+-- surv.optimCoxBoostPenalty
 
 - new filters:
 -- variance
